@@ -2,11 +2,8 @@ package ru.job4j.collection;
 
 import org.hamcrest.MatcherAssert;
 import org.junit.Test;
-
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-
 import static org.hamcrest.core.Is.is;
 
 public class ConvertListTest {
@@ -15,7 +12,7 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<Integer> expect = List.of(1, 2, 3);
         MatcherAssert.assertThat(ConvertList.convert(in), is(expect));
     }
 }
