@@ -10,7 +10,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("sk1", "k1/sk1/ssk1");
-        List<String> expect = Arrays.asList("sk1", "k1", "k1/sk1", "k1/sk1/ssk1");
+        List<String> expect = List.of("sk1", "k1", "k1/sk1", "k1/sk1/ssk1");
         List<String> result = Departments.fillGaps(input);
         MatcherAssert.assertThat(result, is(expect));
     }
@@ -18,7 +18,7 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         MatcherAssert.assertThat(result, is(expect));
     }
